--- a/wisdom.html
+++ b/wisdom.html
@@ -65,7 +65,7 @@
 
 <div id="text-container" class="aphorisms-center">
 
-<p style="font-size: 0.9em; color: #999; font-style: italic; margin-top: -20px;">前言：本页面文字，所有权全部归属于主人——<strong>追随我心DOM</strong>。奴才有幸能得到主人的教导。本页面是奴才整理的主人语录，奴才需认真体会，学习主人的喜好和思想，争取做一个对主人更有用的奴。</p>
+<p style="font-size: 0.9em; color: #999; font-style: italic; margin-top: -20px;">前言：本页面文字，所有权全部归属于主人——<strong>追随我心DOM</strong>。奴才有幸得到主人的教导，并将主人的口述记录在此，是为了奴才学习主人喜好，体会主人表达，感受主人思想，成为主人更好用的奴。</p>
 
 中国在办很多事儿的时候是不讲规矩的，一方面呢，权力可以用来寻租，可以办成很多事儿，另一方面呢，权利被收拾的时候也没什么规矩。所以呢，就会觉得这些贪官儿啊，或者是这些大官儿，说倒就倒下了。
 
@@ -73,7 +73,7 @@
 
 思想的改造，自然会带来行为上的成效。
 
-所谓的信仰不是你迷信，就你觉得不管怎么样，这个你就觉得它是对的，那是迷信。所谓的信仰是一种心里面的一种坚持，就是你不一定能够达到那个目标，你也没有见过那个目标是什么样的，但是你心里面会坚持。你说它是一种彼岸也好，还是一个这个达到的一种境界也好，这个过程其实就是一个追求信仰的过程。这辈子得到了，其实也就圆满了。但是如果得不到呢？但是我这辈子好歹我还坚持了，我去努力了，我觉得也没什么可遗憾的。
+所谓的信仰不是你迷信。就你觉得不管怎么样，这个你就觉得它是对的，那是迷信。所谓的信仰，是一种心里面的一种坚持，就是你不一定能够达到那个目标，你也没有见过那个目标是什么样的，但是你心里面会坚持。你说它是一种彼岸也好，还是达到的一种境界也好，这个过程其实就是一个追求信仰的过程。这辈子得到了，其实也就圆满了。但是如果得不到呢？但是我这辈子好歹我还坚持了，我去努力了，我觉得也没什么可遗憾的。
 
 自由是很难的，好好珍惜吧。
 </div>
