--- a/index.html
+++ b/index.html
@@ -63,15 +63,15 @@
     </nav>
 
 <div id="text-container" class="aphorisms-center">
-<p style="font-size: 0.9em; color: #999; font-style: italic; margin-top: -20px;">前言：本页面文字，所有权全部归属于主人——<strong>追随我心DOM</strong>。奴才有幸能得到主人的教导。本页面是奴才整理的主人的语录，奴才需认真体会，学习主人的喜好和思想，争取做一个对主人更有用的奴。</p>
+<p style="font-size: 0.9em; color: #999; font-style: italic; margin-top: -20px;">前言：本页面文字，所有权全部归属于主人——<strong>追随我心DOM</strong>。奴才有幸能得到主人的教导，因而将主人的口述记录在此，用作奴才学习主人喜好，体会主人表达，感受主人思想的途径，奴才希望通过这一方式，成为主人更好用的奴。</p>
 
-凡事都是有道理的，都要经得起理性的推敲。你如果说就是无缘无故的，你就是崇拜我，或者说你就是一眼就觉得我就是你的主人，你就是我的奴，这是不理性的，是感性的冲动，它经不起时间的考验。我觉得真正的主奴的关系，在时间的过程当中是越来越巩固，越来越牢靠的，一种正反馈。你会觉得，越是做我的奴，你会得到越大的满足，你越想做我的奴，越愿意臣服于我。这才是真正的主奴关系。
+凡事都是有道理的，都要经得起理性的推敲。你如果无缘无故地崇拜我，或者说你一眼就觉得我就是你的主人，你就是我的奴，这是不理性的，是感性的冲动，它经不起时间的考验。我觉得真正的主奴的关系，在时间的过程当中是越来越巩固，越来越牢靠的，一种正反馈。你会觉得，越是做我的奴，你会得到越大的满足，你越想做我的奴，越愿意臣服于我。这才是真正的主奴关系。
 
 两个奴呢，各自发挥各自的作用，但是让主人得到的这种满足，是不可能有其他方式可以替代的只有奴才能给我这样的满足。而且两个奴都是完全的工具化，发挥的只是功能，在主人的眼里，它们就是两个工具。这就是多奴让我觉得最爽的点，能让我得到的满足呢，达到这种1+1>2的这种效果。同时，征服的越多，给我的这种满足感也越大。但是也要分得清哪些是野狗，哪些是真正属于自己的奴，在我的心里面的这个位置是不一样的。我认了的奴，我在我心里面其实是很重要的。
 
 私奴，就是属于我的东西，而且是我可以随时使用，想怎么用就怎么用的东西，这才是叫私奴。
 
-做奴嘛，越是绝对的状态，越是纯粹的奴，越是让主人觉得有支配的满足感。绝对的不平等，阶级，身份，甚至是天生的物种都不一样，所以才是造就了这种不平等，你没有任何的可以去改变的，而且你也不会去改变。你从骨子里面就是顺从，你就是接受这种结果，而且在这个地方，你才是觉得你是最舒服的，最幸福的位置。
+做奴嘛，越是绝对的状态，越是纯粹的奴，越是让主人觉得有支配的满足感。绝对的不平等，阶级，身份，甚至是天生的物种都不一样，所以才是造就了这种不平等，你没有任何可以去改变的，而且你也不会去改变。你从骨子里面就是顺从，你接受这种结果，而且在这个地方，你才是觉得你是最舒服的，最幸福的位置。
 
 我有多少个奴，那么唯一的支配的就是我，或者我会在我的奴里面选一个人去管理着其他的奴，让他们更好的配合来满足我，这都是可以的，但是最终。能够去支配所有奴的，只有我一个。
 
@@ -103,9 +103,9 @@
 
 想尽办法伺候满足主人，来获得主人的一点认可。在主人面前，就放下所有的身份，让自己卑微到尘土，做一个最纯粹的奴。
 
-见你的第一印象，你低眉顺眼的，就觉得像个太监。懂的人吧，的确能看出来这个照片儿里的奴才样。但不懂的人，我觉得可能看到就是一个比较紧张和拘束的人。就是骨子里带出来的东西，除非你很努力的去掩盖，你稍不注意，它就表现出来了。别人怎么看你都无所谓，只要在主子这儿，你大大方方的表现你自己，展示你自己的本质就可以了。我喜欢自然，不刻意的，就是越自然越生活化越好。
+见你的第一印象，你低眉顺眼的，就觉得像个太监。懂的人吧，的确能看出来这个照片儿里的奴才样。但不懂的人，我觉得可能看到一个比较紧张和拘束的人。就是骨子里带出来的东西，除非你很努力的去掩盖，你稍不注意，它就表现出来了。别人怎么看你都无所谓，只要在主子这儿，你大大方方的表现你自己，展示你自己的本质就可以了。我喜欢自然，不刻意的，就是越自然越生活化越好。
 
-那种玩儿法呢，就是一种释放，就是一种集中的那种爆发力的感觉，跟这种生活化的这种细水长流呢，它不太一样，但是呢。偶尔的去发泄一下也是挺爽的，最主要就是主人需要什么样，你就是什么样。需要你日常伺候，你就是一个太监，是个奴才。需要发泄的时候，你就是无脑的贱逼。你的功能越多，越能在更多的场景里面去满足主人，就说明你对主人是越来越有用的。
+那种玩儿法呢，是一种释放，是一种集中爆发的感觉，跟生活化的细水长流不太一样，但是偶尔去发泄一下，也是挺爽的。最主要是，主人需要什么样，你就是什么样。需要你日常伺候，你就是一个太监，是个奴才。需要发泄的时候，你就是无脑的贱逼。你的功能越多，越能在更多的场景里面去满足主人，就说明你对主人是越来越有用的。
 
 什么时候把你和你的性欲完全切割开了，你完全成为只会满足主人的工具了，你的射精就完全是可有可无的。奴不存在任何的贤者时间，任何时间只有一个状态，就是奴。
 
@@ -141,27 +141,27 @@
 
 我比较耐，口的时间长了，就麻木了快感也降低了。所以射给奴吃的少，长时间口舔更多。不是每次都会射，射的时候一般会喂奴吃。不是赏赐你，你再怎么伺候都是你应该的，配不上主子的赏赐。是主子想发泄了，欲望到了很自然的射进飞机杯里。不过赏赐对你来讲也没什么特别的，一个没有自己喜好和欲望的奴才，主子给什么都是赏赐，只能体现主人的慷慨。
 
-算你是一个天生的奴才吧，但你从小也是被当做正常的男人来教育，来养育的，所以呢，你的社会的身份也好，你的平常的世俗的这种价值观也好，它跟你的本质是冲突的，所以你会纠结。但是在跟主人的这种接触和互动当中呢，给你创造了一个独立的一个世界，一个跟现实世界平行的世界。这个世界里面是绝对的纯粹的释放你的奴的本质。所以在这个世界里面，你会觉得更自然更舒心。而且呢，没有什么好纠结的。就一切的发生都是那么的自然。你对主人的所有的顺从、服从、讨好，都是你发自本心的，就没有那种纠结。你跟主人在聊天的时候，或者是在跟主人说这些事情的时候，你是忘记了你的现实社会的那些身份。这跟你读小说是比较像的，小说是等于别人创造了一个世界，你带入到那个角色里面，从而进入到那个世界里面去获得那种满足感。但你跟主人之间的这种互动呢，是两个人一起创造的这样的一个世界。这个世界里面呢，彼此都会获得满足，而且呢，是能够转化为现实的。
+算你是一个天生的奴才吧，但你从小也是被当做正常的男人来教育，来养育的，所以呢，你的社会的身份也好，你的平常的世俗价值观也好，它跟你的本质是冲突的，所以你会纠结。但是在跟主人的接触和互动当中呢，给你创造了一个独立的一个世界，一个跟现实世界平行的世界。这个世界里面是绝对的纯粹的释放你的奴的本质。所以在这个世界里面，你会觉得更自然更舒心。而且呢，没有什么好纠结的。就一切的发生都是那么的自然。你对主人的所有的顺从、服从、讨好，都是你发自本心的，就没有那种纠结。你跟主人在聊天的时候，或者是在跟主人说这些事情的时候，你是忘记了你的现实社会的那些身份。这跟你读小说是比较像的，小说是等于别人创造了一个世界，你带入到那个角色里面，从而进入到那个世界里面去获得那种满足感。但你跟主人之间的这种互动呢，是两个人一起创造的这样的一个世界。这个世界里面呢，彼此都会获得满足，而且呢，是能够转化为现实的。
 
 另外一方面呢，没有人是完美的，就算是主子，就算是你崇拜的主子吧，身上也会有局限，有自己的缺点啊，不足啊，问题呀，但是呢，我觉得。对于我的奴来讲，主人就是主人，不管主人是一个什么样的人，一旦你接受我作为你的主人，那么我就是你唯一的神，就是能够支配，然后能够一辈子支持你，使用你的人。你会毫无保留的接受主人，崇拜主人，包括主人身上所有的优点，也包括主人那些不足和局限。
 
-主人和奴之间的关系是很纯粹的，只有0和1之间的区分，不存在百分比的这种程度。
+主人和奴之间的关系是很纯粹的，只有0和1之间的区分，不存在百分比的程度。
 
 正因为这个人是有缺点的，他才是真实的立体的。也正是因为你接受了这样一个真实的人，这个关系才是真实的，不是那种虚构的，或者是头脑里去幻想出来的。小说的那些情节里面，他会把那些主人公呢，塑造成真的像神一样，从外貌到社会地位，到拥有的这些金钱，什么一切条件打造的完美。这个人设才立得住，那是因为那是虚构的小说，但现实世界里面基本上不存在这样的人，但是你如果认可你的主人的时候，你是接受你主人的一切的，而且是毫无保留的。绝对的，纯粹的。
 
-这种主奴关系也好，还是什么的那本质上它还是由兴趣驱动的，是一种本能的动物反应。就比方说，你对于这些事儿，你说是无脑也好，还是一种生理的欲望也好。就是这种，这是人的本能。主人其实也是在一定的程度上也是有这种本能去驱动的，否则不会有那个启发的、觉醒的那个临界点。但如果只停留在这个层面，对于奴来讲，对于主人来讲也只是沉沦在这种欲望当中。但是呢，可能更高的追求是来自于精神世界的，是这个事情带给你的那种精神的满足能有多大。
+主奴关系也好，还是什么，那本质上它还是由性欲驱动的，是一种本能的动物反应。就比方说，你对于这些事儿，你说是无脑也好，还是一种生理的欲望也好。这是人的本能。主人其实也是在一定的程度上也是由这种本能去驱动的，否则不会有那个启发的、觉醒的那个临界点。但如果只停留在这个层面，对于奴来讲，对于主人来讲也只是沉沦在这种欲望当中。但是呢，可能更高的追求是来自于精神世界的，是这个事情带给你的那种精神的满足能有多大。
 
-看到那个奴字儿了。而且，我看这个图片，我突然有种感觉其实这就是你一个在觉醒的过程，就是你现在是模模糊糊的有一个奴的这个雏形了，过了一段时间之后，你会真正的显现出一个奴。
+看到那个奴字儿了。而且我看这个图片，突然有种感觉，其实这是你一个在觉醒的过程，你现在是模模糊糊的有一个奴的这个雏形了，过了一段时间之后，你会真正的显现出一个奴。
 
 有一次在跟他玩儿的时候，我接到一个工作上的电话，我就一边接电话，他一边给我口，那种半躺的那种椅子吧，他跪在那儿一直给我口。我没想到那个电话呢，要处理一个事儿，说了很长时间，打了半个小时的电话。但这个过程当中呢，他一直在给我口，我不用在乎他，不用理会他，也意识不到它的存在，但是它能带给我持续的爽的感觉，让我第一次真正的理解了什么叫生活化。
 
-真心和坦诚很重要。主奴的关系，其实是很很强的羁绊的关系，建立在两个人的这种认同上面，就。是。一方面是身份的认同，主就是主，奴就是奴，主用奴是天经地义，奴伺候主，满足主人也是理所应当，这是一层的认同。另外一层认同是对彼此作为独立的人的认同。就像你对于主人的睿智，对于主人的思想，对于主人的这些内核的东西，你是认同的。同样，主人对于你的这种内核，就是你作为一个奴的这种认知。你作为一个奴的投入和这种真诚，这也是我认同的，这种认同也是很重要的。
+真心和坦诚很重要。主奴的关系，其实是很很强的羁绊的关系，建立在两个人的这种认同上面。一方面是身份的认同，主就是主，奴就是奴，主用奴是天经地义，奴伺候主，满足主人也是理所应当，这是一层的认同。另外一层认同是对彼此作为独立的人的认同。就像你对于主人的睿智，对于主人的思想，对于主人的这些内核的东西，你是认同的。同样，主人对于你的这种内核，就是你作为一个奴的这种认知。你作为一个奴的投入和这种真诚，这也是我认同的，这种认同也是很重要的。
 
 这种一次性的关系，确实会留下空虚，如果说以满足欲望，或者追求刺激作为终极的目标的话，你会觉得你越追求刺激的东西，你满足了之后，你就会想要更刺激的。那实际上，你的欲望的阈值会越来越高，但是你能够得到的满足感是越来越低的。边际效应递减是非常快的。但是另一方面，你如果是追求精神上的一些东西，精神上的满足，就像我们现在聊的这些事情。肯定是能给彼此带来精神的满足，你满足了之后，你就会想要更深层次的满足，而且呢，会不断的强化这种满足，交流的越多，关系发展的越深，彼此得到的满足感就越强。这是一种正反馈的关系。所以呢，就是在这个主奴的关系里面，这种羁绊的更深的关系呢，其实是能够得到更大的心理满足。这是这个关系最让我看重的。
 
 主和奴是很强的羁绊的关系，这个羁绊的关系是说，一方如果离开了，对方其实是没有存在的意义的。你一个主人，他再怎么优秀，再怎么思想内心强大，对主奴的认知再怎么完整，但是如果他没有自己的奴，他也不能称之为一个真正的主人，那反过来也是一样的。所以这个主和奴之间是互相成就的，是一种很强的羁绊关系。
 
-那个时候也会怀疑会有过动摇，但是，这个你本质的东西是不会变的，就是你内核的这些东西，你天生的这些东西，你总归会非常渴望，又开始寻找。就这种寻找失去，寻找失去的循环，其实是一个感受并不好的这样的一个过程。
+那个时候也会怀疑会有过动摇，但是，这个你本质的东西是不会变的，就是你内核的这些东西，你天生的这些东西。你总归会非常渴望，又开始寻找。就这种寻找失去，寻找失去的循环，其实是一个感受并不好的这样的一个过程。
 
 这个也是我考虑后让我自己这个能够接受的一种说法吧，就是一种信仰。其实所谓的信仰不是你迷信，就你觉得不管怎么样，这个你就觉得它是对的，那是迷信。所谓的信仰是一种心里面的一种坚持，就是你不一定能够达到那个目标，你也没有见过那个目标是什么样的，但是你心里面会坚持。你说它是一种彼岸也好，还是一个这个达到的一种境界也好，这个过程其实就是一个追求信仰的过程。这辈子得到了，其实也就圆满了。但是如果得不到呢？但是我这辈子好歹我还坚持了，我去努力了，我觉得也没什么可遗憾的。
 
