--- a/index.html
+++ b/index.html
@@ -63,17 +63,17 @@
     </nav>
 
 <div id="text-container" class="aphorisms-center">
-<p style="font-size: 0.9em; color: #999; font-style: italic; margin-top: -20px;">前言：本页面文字，所有权全部归属于主人——<strong>追随我心DOM</strong>。奴才有幸能得到主人的教导，因而将主人的口述记录在此，用作奴才学习主人喜好，体会主人表达，感受主人思想的途径，奴才希望通过这一方式，成为主人更好用的奴。</p>
+<p style="font-size: 0.7em; color: #999; font-style: italic; margin-top: -20px;">前言：本页面文字，所有权全部属于主人——<strong>追随我心DOM</strong>。奴才有幸能得到主人的教导，因而将主人的口述记录在此，希望通过这一方式，学习主人的喜好，体会主人的表达，感受主人的思想，成为一个对主人更有用的奴。</p>
 
 凡事都是有道理的，都要经得起理性的推敲。你如果无缘无故地崇拜我，或者说你一眼就觉得我就是你的主人，你就是我的奴，这是不理性的，是感性的冲动，它经不起时间的考验。我觉得真正的主奴的关系，在时间的过程当中是越来越巩固，越来越牢靠的，一种正反馈。你会觉得，越是做我的奴，你会得到越大的满足，你越想做我的奴，越愿意臣服于我。这才是真正的主奴关系。
 
-两个奴呢，各自发挥各自的作用，但是让主人得到的这种满足，是不可能有其他方式可以替代的只有奴才能给我这样的满足。而且两个奴都是完全的工具化，发挥的只是功能，在主人的眼里，它们就是两个工具。这就是多奴让我觉得最爽的点，能让我得到的满足呢，达到这种1+1>2的这种效果。同时，征服的越多，给我的这种满足感也越大。但是也要分得清哪些是野狗，哪些是真正属于自己的奴，在我的心里面的这个位置是不一样的。我认了的奴，我在我心里面其实是很重要的。
+两个奴呢，各自发挥各自的作用。但是让主人得到的满足，是不可能有其他方式可以替代的。只有奴，才能给我这样的满足。而且两个奴都完全的工具化，发挥的只是功能，在主人的眼里，它们就是两个工具。这就是多奴让我觉得最爽的点，能让我得到的满足达到1+1>2的效果。同时，征服的越多，给我的满足感也越大。但是也要分得清哪些是野狗，哪些是真正属于自己的奴，在我的心里面的这个位置是不一样的。我认了的奴，我在我心里面其实是很重要的。
 
 私奴，就是属于我的东西，而且是我可以随时使用，想怎么用就怎么用的东西，这才是叫私奴。
 
 做奴嘛，越是绝对的状态，越是纯粹的奴，越是让主人觉得有支配的满足感。绝对的不平等，阶级，身份，甚至是天生的物种都不一样，所以才是造就了这种不平等，你没有任何可以去改变的，而且你也不会去改变。你从骨子里面就是顺从，你接受这种结果，而且在这个地方，你才是觉得你是最舒服的，最幸福的位置。
 
-我有多少个奴，那么唯一的支配的就是我，或者我会在我的奴里面选一个人去管理着其他的奴，让他们更好的配合来满足我，这都是可以的，但是最终。能够去支配所有奴的，只有我一个。
+不管我有多少个奴，唯一支配的就是我，或者我会在我的奴里面选一个人去管理着其他的奴，让他们更好地配合来满足我，这都是可以的。但是最终，能够去支配所有奴的，只有我一个。
 
 不管主子有多少奴，你都要做那个最懂主子，最能满足主子的，这是你做奴的最大的追求。
 
@@ -141,13 +141,13 @@
 
 我比较耐，口的时间长了，就麻木了快感也降低了。所以射给奴吃的少，长时间口舔更多。不是每次都会射，射的时候一般会喂奴吃。不是赏赐你，你再怎么伺候都是你应该的，配不上主子的赏赐。是主子想发泄了，欲望到了很自然的射进飞机杯里。不过赏赐对你来讲也没什么特别的，一个没有自己喜好和欲望的奴才，主子给什么都是赏赐，只能体现主人的慷慨。
 
-算你是一个天生的奴才吧，但你从小也是被当做正常的男人来教育，来养育的，所以呢，你的社会的身份也好，你的平常的世俗价值观也好，它跟你的本质是冲突的，所以你会纠结。但是在跟主人的接触和互动当中呢，给你创造了一个独立的一个世界，一个跟现实世界平行的世界。这个世界里面是绝对的纯粹的释放你的奴的本质。所以在这个世界里面，你会觉得更自然更舒心。而且呢，没有什么好纠结的。就一切的发生都是那么的自然。你对主人的所有的顺从、服从、讨好，都是你发自本心的，就没有那种纠结。你跟主人在聊天的时候，或者是在跟主人说这些事情的时候，你是忘记了你的现实社会的那些身份。这跟你读小说是比较像的，小说是等于别人创造了一个世界，你带入到那个角色里面，从而进入到那个世界里面去获得那种满足感。但你跟主人之间的这种互动呢，是两个人一起创造的这样的一个世界。这个世界里面呢，彼此都会获得满足，而且呢，是能够转化为现实的。
+你算是一个天生的奴才吧，但你从小也是被当做正常的男人来教育，来养育的，所以呢，你的社会的身份也好，你的平常的世俗价值观也好，它跟你的本质是冲突的，所以你会纠结。但是在跟主人的接触和互动当中呢，给你创造了一个独立的一个世界，一个跟现实世界平行的世界。这个世界里面是绝对的纯粹的释放你的奴的本质。所以在这个世界里面，你会觉得更自然更舒心。而且呢，没有什么好纠结的。就一切的发生都是那么的自然。你对主人的所有的顺从、服从、讨好，都是你发自本心的，就没有那种纠结。你跟主人在聊天的时候，或者是在跟主人说这些事情的时候，你是忘记了你的现实社会的那些身份。这跟你读小说是比较像的，小说是等于别人创造了一个世界，你带入到那个角色里面，从而进入到那个世界里面去获得那种满足感。但你跟主人之间的这种互动呢，是两个人一起创造的这样的一个世界。这个世界里面呢，彼此都会获得满足，而且呢，是能够转化为现实的。
 
 另外一方面呢，没有人是完美的，就算是主子，就算是你崇拜的主子吧，身上也会有局限，有自己的缺点啊，不足啊，问题呀，但是呢，我觉得。对于我的奴来讲，主人就是主人，不管主人是一个什么样的人，一旦你接受我作为你的主人，那么我就是你唯一的神，就是能够支配，然后能够一辈子支持你，使用你的人。你会毫无保留的接受主人，崇拜主人，包括主人身上所有的优点，也包括主人那些不足和局限。
 
 主人和奴之间的关系是很纯粹的，只有0和1之间的区分，不存在百分比的程度。
 
-正因为这个人是有缺点的，他才是真实的立体的。也正是因为你接受了这样一个真实的人，这个关系才是真实的，不是那种虚构的，或者是头脑里去幻想出来的。小说的那些情节里面，他会把那些主人公呢，塑造成真的像神一样，从外貌到社会地位，到拥有的这些金钱，什么一切条件打造的完美。这个人设才立得住，那是因为那是虚构的小说，但现实世界里面基本上不存在这样的人，但是你如果认可你的主人的时候，你是接受你主人的一切的，而且是毫无保留的。绝对的，纯粹的。
+正因为这个人是有缺点的，他才是真实的立体的。也正是因为你接受了这样一个真实的人，这个关系才是真实的，不是那种虚构的，或者是头脑里去幻想出来的。小说的那些情节里面，他会把那些主人公呢，塑造成真的像神一样，从外貌到社会地位，到拥有的这些金钱，什么一切条件，打造得完美，这个人设才立得住，那是因为那是虚构的小说，但现实世界里面基本上不存在这样的人，但是你如果认可你的主人的时候，你是接受你主人的一切的，而且是毫无保留的。绝对的，纯粹的。
 
 主奴关系也好，还是什么，那本质上它还是由性欲驱动的，是一种本能的动物反应。就比方说，你对于这些事儿，你说是无脑也好，还是一种生理的欲望也好。这是人的本能。主人其实也是在一定的程度上也是由这种本能去驱动的，否则不会有那个启发的、觉醒的那个临界点。但如果只停留在这个层面，对于奴来讲，对于主人来讲也只是沉沦在这种欲望当中。但是呢，可能更高的追求是来自于精神世界的，是这个事情带给你的那种精神的满足能有多大。
 
