--- a/wisdom.html
+++ b/wisdom.html
@@ -65,13 +65,17 @@
 
 <div id="text-container" class="aphorisms-center">
 
-<p style="font-size: 0.9em; color: #999; font-style: italic; margin-top: -20px;">前言：本页面文字，所有权全部归属于主人——<strong>追随我心DOM</strong>。奴才有幸得到主人的教导，并将主人的口述记录在此，是为了奴才学习主人喜好，体会主人表达，感受主人思想，成为主人更好用的奴。</p>
+<p style="font-size: 0.7em; color: #999; font-style: italic; margin-top: -20px;">前言：本页面文字，所有权全部属于主人——<strong>追随我心DOM</strong>。奴才有幸能得到主人的教导，因而将主人的口述记录在此，希望通过这一方式，学习主人的喜好，体会主人的表达，感受主人的思想，成为一个对主人更有用的奴。</p>
 
 中国在办很多事儿的时候是不讲规矩的，一方面呢，权力可以用来寻租，可以办成很多事儿，另一方面呢，权利被收拾的时候也没什么规矩。所以呢，就会觉得这些贪官儿啊，或者是这些大官儿，说倒就倒下了。
 
 聪明不等于智慧，智慧里包含着豁达通透。
 
+上善若水，水善利万物而不争，找奴也是，我不强求，合适的奴遇到我跟随我，那也是对奴的成全。
+
 思想的改造，自然会带来行为上的成效。
+
+正因为这个人是有缺点的，他才是真实的立体的。也正是因为你接受了这样一个真实的人，这个关系才是真实的，不是那种虚构的，或者是头脑里去幻想出来的。小说的那些情节里面，他会把那些主人公呢，塑造成真的像神一样，从外貌到社会地位，到拥有的这些金钱，什么一切条件，打造得完美，这个人设才立得住，那是因为那是虚构的小说，但现实世界里面基本上不存在这样的人，但是你如果认可你的主人的时候，你是接受你主人的一切的，而且是毫无保留的。绝对的，纯粹的。
 
 所谓的信仰不是你迷信。就你觉得不管怎么样，这个你就觉得它是对的，那是迷信。所谓的信仰，是一种心里面的一种坚持，就是你不一定能够达到那个目标，你也没有见过那个目标是什么样的，但是你心里面会坚持。你说它是一种彼岸也好，还是达到的一种境界也好，这个过程其实就是一个追求信仰的过程。这辈子得到了，其实也就圆满了。但是如果得不到呢？但是我这辈子好歹我还坚持了，我去努力了，我觉得也没什么可遗憾的。
 
