--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 身体想发泄的时候，就想一想你内心最渴求的是什么，你的身体是属于谁的，你是欲望的奴隶，但你的欲望一样是被主人支配的，主人对你的占有和支配，是彻底的、绝对的
 
-记得我说过我用奴当马桶，是怎么个爽法吗，难道是奴吃屎会让我爽吗？嗯，你在我面前很下贱，但不要故意犯贱。尊卑不是表现得下贱，是对主子毕恭毕敬、服服帖帖，凡事先想，主子需要什么喜欢什么。训练你这种思维模式也很重要，直到成为下意识的反应。
+记得我说过我用奴当马桶，是怎么个爽法吗，难道是奴吃屎会让我爽吗？你在我面前很下贱，但不要故意犯贱。尊卑不是表现得下贱，是对主子毕恭毕敬、服服帖帖，凡事先想，主子需要什么喜欢什么。训练你这种思维模式也很重要，直到成为下意识的反应。
 
 你要珍惜主子教育你的机会，自己也要常反思，什么时候想到主子前面去了，主子没想到呢，你就伺候好了，那才算个好用的奴才。
 
