--- a/wisdom.html
+++ b/wisdom.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>追随他的心</title>
+    <title>认知篇｜追随他的心</title>
     <style>
         .nav {
             background: #f8f9fa;
