--- a/index.html
+++ b/index.html
@@ -189,17 +189,17 @@
 
 每天上班儿那么忙那么累，回来就是享受的。就主子就把该干的事儿平时都干好，等主子回来，就开始专心的伺候。
 
-是主人救赎了你，让你不会成为自己欲望的奴隶，让你有了皈依，让你的人生有了目标和意义。 这才是真正的奴，一切都为了主人。 
+是主人救赎了你，让你不会成为自己欲望的奴隶，让你有了皈依，让你的人生有了目标和意义。这才是真正的奴，一切都为了主人。 
 
 开始的时候不会有太强的刺激，更考验你日常伺候的耐心，也更能体现你给主人做奴的决心。 
 
 人的本能都是从自己出发，有些人可以做到一定程度的利他，但奴要做到绝对的唯他。 
 
-你的脑子原来就是个空壳，现在是注入了主人的思想。 以前的脑子都是空转的，现在是围着主子在转，但已经不是空洞的大脑，是越来越充实的大脑。 
+你的脑子原来就是个空壳，现在是注入了主人的思想。以前的脑子都是空转的，现在是围着主子在转，但已经不是空洞的大脑，是越来越充实的大脑。 
 
-你作为人的思维能力一直是存在的，但你的认知已经完全被改变了，得到了重生。 用理性的思维去思考意义、更新认知，再用行动去实践这种认知，得到意义的升华。 从认识到实践的螺旋上升。 
+你作为人的思维能力一直是存在的，但你的认知已经完全被改变了，得到了重生。用理性的思维去思考意义、更新认知，再用行动去实践这种认知，得到意义的升华。从认识到实践的螺旋上升。 
 
-带锁是减少你触碰狗屌的机会，控制你身体上能得到的快感。 同时一个物理存在的东西，也会时刻提醒你奴的身份。 
+戴锁是减少你触碰狗屌的机会，控制你身体上能得到的快感。同时一个物理存在的东西，也会时刻提醒你奴的身份。 
 
 
 </div>
